welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:7: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
def motif2(c:Color) {setCouleurBrosse()
                                     ^PatternPicture:16: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
def motif1(c:Color) {setCouleurBrosse()
                                     ^PatternPicture:24: error: not found: value BaisseBrosse
def marque() {BaisseBrosse();leveBrosse()}
              ^